--- a/templates/user.html
+++ b/templates/user.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User</title>
-</head>
-<body>
-  <h1>Welcome, {{ .Name }}</h1>
-</body>
-</html>
+{{ define "content" }}
+<meta name="token" content="{{ .Token }}">
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="mb-4">Listado de iglesias</h1>
+      <div id="churchesContainer" class="row"></div>
+    </div>
+  </div>
+</div>
+<script src="/assets/javascript/churches.js"></script>
+{{ end }}
